--- a/src/main/java/uk/co/reecedunn/intellij/plugin/xquery/settings/XQueryPropertiesUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/xquery/settings/XQueryPropertiesUI.form
@@ -22,7 +22,7 @@
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="375db" class="javax.swing.JComboBox" binding="mLanguageLevel" custom-create="true">
+      <component id="375db" class="javax.swing.JComboBox" binding="mVersion" custom-create="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
