Add a message bundle to support localising user-facing plugin text.

--- a/src/main/java/uk/co/reecedunn/intellij/plugin/xquery/settings/XQueryPropertiesUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/xquery/settings/XQueryPropertiesUI.form
@@ -14,7 +14,7 @@
         </constraints>
         <properties>
           <labelFor value="375db"/>
-          <text value="Default XQuery version:"/>
+          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.project.default.version.label"/>
         </properties>
       </component>
       <vspacer id="fda1a">
