--- a/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsUI.form
@@ -86,10 +86,10 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.server-port.label"/>
+          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.database-port.label"/>
         </properties>
       </component>
-      <component id="5ee06" class="javax.swing.JTextField" binding="serverPort" custom-create="true">
+      <component id="5ee06" class="javax.swing.JTextField" binding="databasePort" custom-create="true">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
