--- a/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
@@ -27,12 +27,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="5fdd2" class="javax.swing.JButton" binding="createQueryProcessor" custom-create="true">
+      <component id="5fdd2" class="javax.swing.JButton" binding="manageQueryProcessors" custom-create="true">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.configurations.processor.create.label"/>
+          <text resource-bundle="messages/XQueryBundle" key="xquery.configurations.processor.manage.label"/>
         </properties>
       </component>
     </children>
