--- a/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
@@ -52,7 +52,7 @@
           <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.api-jar.label"/>
         </properties>
       </component>
-      <component id="5814d" class="com.intellij.openapi.ui.ComponentWithBrowseButton" binding="jar" custom-create="true">
+      <component id="fee21" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="jar" custom-create="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
