--- a/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
@@ -154,7 +154,7 @@
           <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.config-path.label"/>
         </properties>
       </component>
-      <component id="8a463" class="com.intellij.openapi.ui.ComponentWithBrowseButton" binding="configuration" custom-create="true">
+      <component id="475eb" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="configuration" custom-create="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
