--- a/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
+++ b/src/main/java/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
@@ -21,19 +21,11 @@
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="31652" class="javax.swing.JComboBox" binding="queryProcessor" custom-create="true">
+      <component id="b77a8" class="com.intellij.openapi.ui.ComponentWithBrowseButton" binding="queryProcessor" custom-create="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
-      <component id="5fdd2" class="javax.swing.JButton" binding="manageQueryProcessors" custom-create="true">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.configurations.processor.manage.label"/>
-        </properties>
       </component>
       <component id="55968" class="javax.swing.JLabel">
         <constraints>
