--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.configurations.processor.query-processor.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.processor.query-processor.label"/>
         </properties>
       </component>
       <vspacer id="5bfd7">
@@ -32,7 +32,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.configurations.processor.script-file.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.processor.script-file.label"/>
         </properties>
       </component>
       <component id="3151a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="scriptFile" custom-create="true">
