Display the ProfileEntry results in the table view.

--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/ui/ProfileConsoleViewUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/ui/ProfileConsoleViewUI.form
@@ -47,14 +47,19 @@
           </component>
         </children>
       </grid>
-      <component id="5628c" class="javax.swing.JTable" binding="results" custom-create="true">
+      <scrollpane id="934bb">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="5628c" class="javax.swing.JTable" binding="results" custom-create="true">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
