--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
@@ -121,7 +121,7 @@
           <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.processor.module-root.label"/>
         </properties>
       </component>
-      <component id="5ee16" class="javax.swing.JTextField" binding="modulePath">
+      <component id="dc5a3" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="modulePath" custom-create="true">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
