--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorRunConfigurationEditorUI.form
@@ -161,6 +161,21 @@
               </component>
             </children>
           </grid>
+          <grid id="ac13" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="4" left="4" bottom="4" right="4"/>
+            <constraints>
+              <tabbedpane title-resource-bundle="messages/PluginApiBundle" title-key="xquery.configurations.processor.group.context-item.label"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="8625" class="javax.swing.JComponent" binding="contextItemLayout" custom-create="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </component>
+            </children>
+          </grid>
         </children>
       </tabbedpane>
     </children>
